--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         <a href="#"> <i class="fas fa-user"></i> by user </a>
                         <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                     </div>
-                    <h3>fresh and organic vegitables and fruits</h3>
+                    <h3>fresh and organic vegetables and fruits</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
@@ -424,7 +424,7 @@
                         <a href="#"> <i class="fas fa-user"></i> by user </a>
                         <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                     </div>
-                    <h3>fresh and organic vegitables and fruits</h3>
+                    <h3>fresh and organic vegetables and fruits</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
@@ -437,7 +437,7 @@
                         <a href="#"> <i class="fas fa-user"></i> by user </a>
                         <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                     </div>
-                    <h3>fresh and organic vegitables and fruits</h3>
+                    <h3>fresh and organic vegetables and fruits</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
