--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 <h3>contact info</h3>
                 <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890 </a>
                 <a href="#" class="links"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> anbuselvan@gmail.com </a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> groco@gmail.com </a>
                 <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> chennai, india - 600083 </a>
             </div>
 
